--- a/public/css/new.css
+++ b/public/css/new.css
@@ -1,4 +1,8 @@
 
+p {
+	word-wrap:break-word;
+}
+
 li {
     list-style-type: none; /* Убираем маркеры */
    }
@@ -35,4 +39,8 @@ li {
 .commentText {
 	width:  500px;
     height: 30px;
+}
+
+.panel-body.all-comments {
+	min-height: 300px;
 }
